
syntax = "proto3";

package calculator;

option go_package = "github.com/orlandorode97/grpc-golang-course/calculator/proto";

message MaxRequest {
  int32 number = 1;
}

message MaxResponse {
  int32 max = 1;
}
