syntax = "proto3";

package calculator;

option go_package = "github.com/orlandorode97/grpc-golang-course/calculator/proto";

message SumRequest {
  uint32 number_1 = 1;
  uint32 number_2 = 2;
}

message SumResponse {
  uint32 sum = 1;
}
